# RK3588-Based-Edge-Side-Embodied-Intelligent-Actuator

./: .gitignore  LICENSE  README.md  main.py  menu.py  readme.md  requirements.txt  va.py  webui.py  评估报告.md
OrbbecSDK/OrbbecSDK_v1.10.27/: README.md  README_CN.md
OrbbecSDK/OrbbecSDK_v1.10.27/Example/cpp/Sample-DoubleInfraredViewer/: CMakeLists.txt  DoubleInfraredViewer.cpp
OrbbecSDK/OrbbecSDK_v1.10.27/Example/cpp/Sample-SyncAlignViewer/: CMakeLists.txt  SyncAlignViewer.cpp
OrbbecSDK/OrbbecSDK_v1.10.27/Example/cpp/Sample-Transformation/: CMakeLists.txt
astra/: CMakeLists.txt  README.md  __init__.py  camera.py  capture.cpp
astra/astra/: __init__.py
camera/: __init__.py
config/: README.md  cpu_affinity.py  memory.py  safety.py  settings.py  teaching.py
config/config/: README.md  settings.py
docs/: astra_deploy.md  deploy_guide.md  optimal_grasp_plan.md  project_manual.md  tech_manual.md  teleop_dual_arm.md  teleop_vla_plan.md  test_plan.md
docs/docs/: deploy_guide.md  pretrained_models.md  project_manual.md
lerobot/: README.md  pyproject.toml
lerobot/src/lerobot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
lerobot/src/lerobot/processor/: __init__.py
lerobot/src/lerobot/robots/so_follower/: robot_kinematic_processor.py
lerobot/src/lerobot/scripts/: lerobot_calibrate.py  lerobot_find_cameras.py  lerobot_record_lite.py  lerobot_setup_motors.py  lerobot_teleoperate.py
lerobot/src/lerobot/utils/: utils.py  visualization_utils.py
models/SenseVoice/: README.md  embedding.npy  requirements.txt  sensevoice_rknn.py
models/SmolVLM-256M/: SmolVLM-256M-Instruct (V1) RK3588_ELF2 模型转换与部署全流程.md
motion_library/: index.json
motion_library/grasp/: grasp_01.json
motion_library/lift/: 抬起_01.json
motion_library/motion_library/: grasp_01.json  greeting_01.json  index.json  test_greet_01.json
rknn-llm-release-v1.2.3/: CHANGELOG.md  LICENSE  README.md  benchmark.md
scripts/: README.md  adaptive_grasp.py  calib_teleop.py  calib_vlm.py  calibrate_aruco.py  calibrate_camera.py  calibrate_extrinsics.py  calibrate_handeye.py  calibrate_quick.py  calibrate_tilt.py  calibrate_tune.py  camera_viewer.py  d435i_viewer.py  develop_motion.py  export_qwen3_5_vision.py  export_vision_rknn.py  gesture_poses.json  gestures.py  grasp_test.py  hand_follow.py  install_whisper.sh  lerobot-record-lite  monitor.py  record.sh  record_poses.py  record_task.py  record_teleop.py  record_trajectory.py  record_with_view.sh  recorder.py  replay_traj.py  run_vla.sh  say.py  smooth_traj.py  smooth_trajectory.py  task_controller.py  teleop.sh  teleop_dual_arm.py  teleop_record.py  test_d435i_3d.py  (+22 more)
scripts/demo_src/: build.sh
scripts/scripts/: README.md  calibrate_camera.py  calibrate_handeye.py  check_gripper.py  download_mobilenet.py  download_smolvlm2.py  off.py  rkeia.service  smooth_traj.py  teleop.sh  teleop_record.py  test_d435i.py  test_dual_cam.py  test_grounding.py  test_integration.py  test_replay_fast.py  test_sync_move.py  test_vla_voice.py  visual_servo.py  voice_gesture_test.py  web_demo.py
task_library/: _template.json
tests/: README.md  test_ik.py  test_locator.py  test_vlm.py
vla/: command_queue.py  kinematics.py
vla/control/: README.md  controller.py
vla/pipe/: README.md  pipeline.py
vla/vision/: README.md  __init__.py  detector.py  locator.py  pca_grasp.py
vla/vlm/: README.md  __init__.py  base.py  factory.py  (+6 more)
(+464 files in other folders)
