# Copyright 2024 The HuggingFace Inc. team. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot"
version = "0.4.4"
description = "LeRobot v0.4.4 (精简版，仅遥操作)"
dynamic = ["readme"]
license = { text = "Apache-2.0" }
requires-python = ">=3.10"

dependencies = [
    "pyserial>=3.5,<4.0",
    "opencv-python-headless>=4.9.0,<4.13.0",
    "torch>=2.2.1,<2.11.0",
    "draccus==0.10.0",
    "deepdiff>=7.0.1,<9.0.0",
    "einops>=0.8.0,<0.9.0",
    "huggingface-hub>=0.34.2,<0.36.0",
    "packaging>=24.2,<26.0",
]

[project.optional-dependencies]
feetech = ["feetech-servo-sdk>=1.0.0,<2.0.0"]

[project.scripts]
lerobot-teleoperate="lerobot.scripts.lerobot_teleoperate:main"
lerobot-calibrate="lerobot.scripts.lerobot_calibrate:main"
lerobot-find-port="lerobot.scripts.lerobot_find_port:main"
lerobot-find-cameras="lerobot.scripts.lerobot_find_cameras:main"
lerobot-setup-motors="lerobot.scripts.lerobot_setup_motors:main"
lerobot-info="lerobot.scripts.lerobot_info:main"

[tool.setuptools.package-data]
lerobot = []

[tool.setuptools.packages.find]
where = ["src"]
